# pytest-jinja-check

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  generate_template_docs.py  pyproject.toml
.cursor/rules/: comitting-changes.mdc
.github/workflows/: release.yml  test.yml
issues/: ISSUE_IMPORT_GUIDE.md  import_issues.py
issues/advanced-analysis/: 10-hardcoded-routes.md  11-type-inference.md
issues/mvp/: 01-package-structure.md  02-cli-tool.md  03-syntax-validation.md  04-test-suite.md  05-documentation.md  06-pypi-publishing.md
issues/runtime-validation/: 07-runtime-decorator.md  08-fastapi-integration.md  09-flask-integration.md
src/pytest_jinja_check/: __init__.py  config.py  context_validation.py  endpoint_validation.py  lint_runner.py  models.py  plugin.py  route_analysis.py  template_analysis.py
tests/: conftest.py  test_config.py  test_context_validation.py  test_endpoint_validation.py  test_lint_runner.py  test_plugin.py  test_route_analysis.py  test_template_analysis.py
tests/fixtures/app/: main.py
tests/fixtures/templates/: about.html  bad_syntax.html  base.html  base_with_default_block.html  home.html  set_in_if_in_for.html  uses_macro.html  uses_macro_alias.html  uses_set_in_child.html
tests/fixtures/templates/macros/: logo.html
tests/fixtures/templates/partials/: nav.html
