[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-jinja-check"
version = "0.1.0"
description = "Pytest plugin to lint Jinja2 templates in FastAPI applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Christopher C. Smith", email = "christopher.smith@promptlytechnologies.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "jinja2>=3.0",
    "pytest>=7.0",
    "tomli>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
dev = [
    "fastapi>=0.100",
    "httpx",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/Promptly-Technologies-LLC/pytest-jinja-check"
Repository = "https://github.com/Promptly-Technologies-LLC/pytest-jinja-check"
Issues = "https://github.com/Promptly-Technologies-LLC/pytest-jinja-check/issues"

[project.entry-points.pytest11]
pytest_jinja_check = "pytest_jinja_check.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_jinja_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_message = "chore: release {version}"
